# fallout2-ce

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: Build.yml  ci-build.yml  release.yml
cmake/: FindSDL2.cmake  gitver.cmake
cmake/toolchain/: Emscripten.cmake  switch.cmake
fonts/chs/: font.ini
fonts/english/: font.ini
os/android/: .gitignore  settings.gradle
os/android/app/: build.gradle
os/android/app/src/debug/res/values/: strings.xml
os/android/app/src/main/: AndroidManifest.xml
os/android/app/src/main/java/com/alexbatalov/fallout2ce/: FileUtils.java  ImportActivity.java  MainActivity.java
os/android/app/src/main/java/org/libsdl/app/: SDLActivity.java
os/android/app/src/main/res/values/: strings.xml
os/ios/: Info.plist
os/macos/: Info.plist  fallout2-ce.icns
os/macos/dmg/: setup.scpt
os/web/: .gitignore  .prettierignore  README.md  asyncfetchfs.js  asyncfetchfs.mjs  config.js  config.mjs  consts.js  consts.mjs  debugTags.mjs  fetchArrayBufProgress.mjs  fetcher.js  fetcher.mjs  gamecache.mjs  games.js  hotkeys_and_workarounds.mjs  index.css  index.html  index.js  index.mjs  index.sw.js  iniparser.js  iniparser.mjs  initFilesystem.mjs  loadJs.mjs  mainmenu.css  mainmenu.js  mainmenu.mjs  menu.css  menu.html  menu.js  menu.sw.js  onscreen_keyboard.js  onscreen_keyboard.mjs  pako.mjs  resizeCanvas.mjs  service_worker_manager.mjs  serviceworker.generated.d.ts  serviceworker.ts  setErrorState.mjs  (+6 more)
os/web/old/: index.css  index.html  menu.css  menu.sw.js
os/windows/: fallout2-ce.rc
src/: FpsLimiter.cc  FpsLimiter.h  actions.c  actions.cc  actions.h  animation.cc  animation.h  args.c  args.cc  args.h  art.c  art.cc  art.h  audio.c  audio.cc  audio.h  audio_engine.cc  audio_engine.h  audio_file.c  audio_file.cc  audio_file.h  automap.c  automap.cc  automap.h  autorun.c  autorun.cc  autorun.h  cache.c  cache.cc  cache.h  character_editor.c  character_editor.cc  character_editor.h  character_selector.c  character_selector.cc  character_selector.h  color.c  color.cc  color.h  combat.c  (+344 more)
src/mapper/: map_func.cc  map_func.h  mapper.cc  mapper.h  mp_proto.cc  mp_proto.h  mp_scrpt.cc  mp_scrpt.h  mp_targt.cc  mp_targt.h  mp_text.cc  mp_text.h
src/platform/: git_version.h.in
src/platform/ios/: paths.mm
